--- a/app/assets/stylesheets/base/grid.scss
+++ b/app/assets/stylesheets/base/grid.scss
@@ -5,8 +5,8 @@
   flex: 1;
 }
 
-@media (max-width: 400px) {
-  .flex-grid {
-    display: block;
-  }
-}
+// @media (max-width: 400px) {
+//   .flex-grid {
+//     display: block;
+//   }
+// }
